Fix spacing for Systems I Work With section

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -226,7 +226,24 @@ nav {
   flex: 1;
   list-style: none;
   padding: 0;
+}
+
+.core-values-list {
   font-size: 12px;
+}
+
+.systems-work-with-list {
+  display: flex;
+  gap: 24px;
+  list-style: none;
+  padding: 0;
+  font-size: 10px;
+}
+
+.systems-work-with-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .core-values-item-title {
